# github-dev-card-generator

./: .env.example  docker-compose.yml  run_local.ps1
backend/: .gitignore  Dockerfile  agent.py  main.py  mcp_server.py  pyproject.toml  requirements.txt  test_end_to_end.py  test_kv.py
backend/static/cards/: asha.html  divya123.html  divyalakshmi.html  harshiv.html  kvodivyalakshmi.html  saravana.html  shiva.html  torvalds.html  xxxxx.html
frontend/: Dockerfile  index.html
